Implemented history in classifications

--- a/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
@@ -112,6 +112,9 @@
 							<button type="button" class="btn btn-primary btn-edit btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editTask(task)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
 								<span class="glyphicon glyphicon-pencil"></span>
 							</button>
+							<button type="button" class="btn btn-history btn-circle pull-right" style="margin-right: 1em;" data-ng-click="showHistory(task)" uib-tooltip="{{'labels:tool_history' | i18next}}">
+								<img src="../img/history_icon.png" />
+							</button>
 						</td>
 					</tr>
 				</tbody>
