--- a/game-engine.web/src/main/resources/consoleweb-assets/game-monitor/game-monitor.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/game-monitor/game-monitor.html
@@ -28,16 +28,34 @@
 		</div>
 	</div>
 
-	<div class="row">
-		<div class="col-md-12">
-			<form data-role="form" style="margin:15px 0">
-				<div class="input-group">
-					<input id="player" type="text" data-ng-model="playerIdFilter" ng-change="filter()" class="form-control" placeholder="{{'labels:lbl_filter_ph' | i18next}}" autofocus/>
-					<span class="input-group-btn">
-					<button class="btn btn-primary" type="submit" title="{{'labels:tool_filter' | i18next}}">
-              			<div class="glyphicon glyphicon-search"></div>
-              		</button>
-              	</span>
+	<div class="row" id="monitor-filter">
+		<div class="col-md-3">
+			<label>{{'labels:lbl_order' | i18next}}:</label>
+			<div class="select">
+				<select ng-model="order">
+					<option value="playerId">{{'labels:opt_alphabetically' | i18next}}</option>
+					<option value="totalScore">{{'labels:opt_increasing' | i18next}}</option>
+					<option value="-totalScore">{{'labels:opt_decreasing' | i18next}}</option>
+				</select>
+			</div>
+		</div>
+		<div class="col-md-3">
+			<label>{{'labels:lbl_filter' | i18next}}:</label>
+			<div class="select">
+				<select ng-model="order">
+					<option value="all">{{'labels:opt_all' | i18next}}</option>
+					<option value="team">{{'labels:opt_teams' | i18next}}</option>
+					<option value="player">{{'labels:opt_players' | i18next}}</option>
+				</select>
+				<span id="filter">Filtro avanzato</span>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<form class="form-inline">
+				<label>{{'labels:lbl_search' | i18next}}:</label>
+				<div class="form-group has-feedback">
+					<input type="text" class="form-control" ng-model="searchText" />
+					<i class="glyphicon glyphicon-search form-control-feedback"></i>
 				</div>
 			</form>
 		</div>
@@ -47,18 +65,24 @@
 			<h4>{{'labels:lbl_players_list' | i18next}}</h4>
 			<table class="table table-striped table-bordered">
 				<tbody>
-					<tr data-ng-repeat="player in playerStates.content">
+					<tr data-ng-repeat="player in playerStates.content | orderBy: order">
 						<td>
 							<div class="row record">
 								<div class="col-md-12">
 									<div class="player">
 										<span class="id" ng-class="{'bold': !hideDetails}">{{player.playerId}}</span>
-										<span class="points" ng-show="hideDetails">{{'labels:lbl_summary_score' | i18next}}: {{player.totalScore}}</span>
+										<span class="points" ng-if="hideDetails">{{'labels:lbl_summary_score' | i18next}}: {{player.totalScore}}</span>
 									</div>
-									<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right:1em;margin-top:9px;" data-ng-click="hideDetails = !hideDetails"
-										uib-tooltip="{{'labels:tool_view' | i18next}}">
-									<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideDetails, 'glyphicon-eye-close': !hideDetails}"></span>
-								</button>
+									<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right:1em;margin-top:9px;" data-ng-click="hideDetails = !hideDetails" uib-tooltip="{{'labels:tool_view' | i18next}}">
+										<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideDetails, 'glyphicon-eye-close': !hideDetails}"></span>
+									</button>
+									<button type="button" ng-if="hideDetails" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;margin-top:9px;" data-ng-click="editPlayer(player)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
+										<span class="glyphicon glyphicon-pencil"></span>
+									</button>
+									<button type="button" ng-if="hideDetails" class="btn btn-reset btn-circle pull-right" style="margin-right: 1em;margin-top:9px;" data-ng-click="resetPlayer(player)" uib-tooltip="reset">
+										<img src="../img/reset_icon.png"/>
+									</button>
+									<span ng-if="!hideDetails" class="block-player pull-right" ng-click="blockPlayer(player)">{{'labels:lbl_block_player' | i18next}}</span>
 								</div>
 							</div>
 							<div class="row details" uib-collapse="hideDetails">
@@ -155,8 +179,7 @@
 	</div>-->
 		<div class="row">
 			<div class="col-md-6 col-md-offset-4">
-				<uib-pagination boundary-links="true" total-items="totalItems" items-per-page="items4Page" data-ng-change="update()" ng-model="currentPage"
-					class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
+				<uib-pagination boundary-links="true" total-items="totalItems" items-per-page="items4Page" data-ng-change="update()" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
 			</div>
 		</div>
 	</div>
