--- a/game-engine.web/src/main/resources/consoleweb-assets/game-monitor/game-monitor.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/game-monitor/game-monitor.html
@@ -26,6 +26,9 @@
 		<div class="col-md-12 text-center">
 			<uib-alert ng-if="err" type="danger">{{err | i18next}}</uib-alert>
 		</div>
+		<div class="col-md-12 text-center">
+			<uib-alert ng-if="success" type="success">{{success | i18next}}</uib-alert>
+		</div>
 	</div>
 
 	<div class="row" id="monitor-filter">
@@ -42,19 +45,19 @@
 		<div class="col-md-3">
 			<label>{{'labels:lbl_filter' | i18next}}:</label>
 			<div class="select">
-				<select ng-model="order">
+				<select ng-model="category" ng-change="filter()">
 					<option value="all">{{'labels:opt_all' | i18next}}</option>
-					<option value="team">{{'labels:opt_teams' | i18next}}</option>
-					<option value="player">{{'labels:opt_players' | i18next}}</option>
+					<option value="teams">{{'labels:opt_teams' | i18next}}</option>
+					<option value="players">{{'labels:opt_players' | i18next}}</option>
 				</select>
-				<span id="filter">Filtro avanzato</span>
 			</div>
+			<span id="filter" ng-click="advancedFilter()">{{'labels:lbl_adv_filter' | i18next}}</span>
 		</div>
 		<div class="col-md-6">
 			<form class="form-inline">
 				<label>{{'labels:lbl_search' | i18next}}:</label>
 				<div class="form-group has-feedback">
-					<input type="text" class="form-control" ng-model="searchText" />
+					<input type="text" class="form-control" ng-model="searchText" ng-change="filter()" />
 					<i class="glyphicon glyphicon-search form-control-feedback"></i>
 				</div>
 			</form>
@@ -66,23 +69,27 @@
 			<table class="table table-striped table-bordered">
 				<tbody>
 					<tr data-ng-repeat="player in playerStates.content | orderBy: order">
-						<td>
+						<td ng-class="{'blocked': player.blocked}">
 							<div class="row record">
 								<div class="col-md-12">
 									<div class="player">
 										<span class="id" ng-class="{'bold': !hideDetails}">{{player.playerId}}</span>
 										<span class="points" ng-if="hideDetails">{{'labels:lbl_summary_score' | i18next}}: {{player.totalScore}}</span>
 									</div>
-									<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right:1em;margin-top:9px;" data-ng-click="hideDetails = !hideDetails" uib-tooltip="{{'labels:tool_view' | i18next}}">
+									<button type="button" ng-show="!edit" class="btn btn-warning btn-circle pull-right" style="margin-right:1em;margin-top:9px;" data-ng-click="hideDetails=!hideDetails" uib-tooltip="{{'labels:tool_view' | i18next}}">
 										<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideDetails, 'glyphicon-eye-close': !hideDetails}"></span>
 									</button>
-									<button type="button" ng-if="hideDetails" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;margin-top:9px;" data-ng-click="editPlayer(player)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
+									<button type="button" ng-show="hideDetails" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;margin-top:9px;" data-ng-click="editPlayer(player);hideDetails=false;edit=true" uib-tooltip="{{'labels:tool_edit' | i18next}}">
 										<span class="glyphicon glyphicon-pencil"></span>
 									</button>
 									<button type="button" ng-if="hideDetails" class="btn btn-reset btn-circle pull-right" style="margin-right: 1em;margin-top:9px;" data-ng-click="resetPlayer(player)" uib-tooltip="reset">
 										<img src="../img/reset_icon.png"/>
 									</button>
-									<span ng-if="!hideDetails" class="block-player pull-right" ng-click="blockPlayer(player)">{{'labels:lbl_block_player' | i18next}}</span>
+									<span ng-if="!hideDetails && !edit && !player.blocked" class="block-player pull-right" ng-click="blockPlayer(player)">{{'labels:lbl_block_player' | i18next}}</span>
+									<span ng-if="!hideDetails && !edit && player.blocked" class="unlock-player pull-right" ng-click="unlockPlayer(player)">{{'labels:lbl_unlock_player' | i18next}}</span>
+
+									<button type="button" ng-show="edit" class="btn btn-danger pull-right" data-ng-click="hideDetails=true;edit=false">{{'labels:btn_cancel' | i18next}}</button>
+									<button type="button" style="margin-right:10px;" ng-show="edit" class="btn btn-success pull-right" data-ng-click="save(player)">{{'labels:btn_save' | i18next}}</button>
 								</div>
 							</div>
 							<div class="row details" uib-collapse="hideDetails">
@@ -91,22 +98,37 @@
 									<span class="total">{{'labels:lbl_total' | i18next}}: <b>{{player.totalScore}}</b></span>
 
 									<table class="point-box">
-										<tr ng-repeat="elem in player.state['PointConcept']">
+										<tr ng-if="!edit" ng-repeat="elem in player.state['PointConcept']">
 											<td>
 												<span>{{elem.name}}:</span>
 												<span class="value">{{elem.score}}</span>
+											</td>
+										</tr>
+										<tr ng-if="edit" ng-repeat="elem in input.state['PointConcept']">
+											<td>
+												<span>{{elem.name}}:</span>
+												<input type="text" ng-model="elem.score" />
 											</td>
 										</tr>
 									</table>
 								</div>
 								<div class="col-md-8">
 									<h5>Badges</h5>
-									<table class="badge-box">
-										<tr data-ng-repeat="elem in player.state['BadgeCollectionConcept']">
+									<table class="badge-box" style="width:100%;">
+										<tr ng-if="!edit" data-ng-repeat="elem in player.state['BadgeCollectionConcept']">
 											<td>
-												<!--<span>{{elem.name}} ({{elem.badgeEarned.length}}):</span>-->
 												<span>{{elem.name}} <span class="badge">{{elem.badgeEarned.length}}</span>:</span>
 												<span class="value badge-elem" data-ng-repeat="badge in elem.badgeEarned track by $index">{{badge}}</span>
+											</td>
+										</tr>
+										<tr ng-if="edit" data-ng-repeat="elem in input.state['BadgeCollectionConcept']">
+											<td>
+												<span>{{elem.name}} <span class="badge">{{elem.badgeEarned.length}}</span>:</span>
+												<input ng-model="elem.badgeEarned" ng-list style="width:70%" />
+												<button type="button" class="btn btn-success btn-add-point pull-right" data-ng-click="addPoint(elem)" uib-tooltip="{{'labels:tool_add' | i18next}}" ng-disabled="disabled">
+													<span class="glyphicon glyphicon-plus"></span>
+												</button>
+												<!--<span class="value badge-elem" data-ng-repeat="badge in elem.badgeEarned track by $index">{{badge}}</span>-->
 											</td>
 										</tr>
 									</table>
@@ -115,7 +137,13 @@
 									<h5>Custom data</h5>
 									<div ng-hide="player.hasCustomData" style="margin: 0 10px;">{{'messages:msg_no_customdata' | i18next }}</div>
 									<table class="badge-box" ng-show="player.hasCustomData">
-										<tr data-ng-repeat="(key, value) in player.customData">
+										<tr ng-if="!edit" data-ng-repeat="(key, value) in player.customData">
+											<td>
+												<span>{{key}}:</span>
+												<span class="value">{{value}}</span>
+											</td>
+										</tr>
+										<tr ng-if="edit" data-ng-repeat="(key, value) in input.customData">
 											<td>
 												<span>{{key}}:</span>
 												<span class="value">{{value}}</span>
@@ -178,7 +206,7 @@
 		</div>
 	</div>-->
 		<div class="row">
-			<div class="col-md-6 col-md-offset-4">
+			<div class="col-md-12 text-center">
 				<uib-pagination boundary-links="true" total-items="totalItems" items-per-page="items4Page" data-ng-change="update()" ng-model="currentPage" class="pagination-sm" previous-text="&lsaquo;" next-text="&rsaquo;" first-text="&laquo;" last-text="&raquo;"></uib-pagination>
 			</div>
 		</div>
