--- a/game-engine.web/src/main/resources/consoleweb-assets/rules/rules.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/rules/rules.html
@@ -116,26 +116,29 @@
 						</div>
 					</form>
 				</div>
-				<h5>{{'labels:lbl_rules_menu' | i18next}}</h5>
+				<div class="col-md-12">
+					<h5 style="display:inline">{{'labels:lbl_rules_menu' | i18next}}</h5>
+					<button uib-collapse="selectedRules.length == 0" class="btn btn-success pull-right" data-ng-click="publishSelection()">{{'labels:lbl_publish_selection' | i18next}}</button>
+				</div>
 				<table class="table table-striped table-bordered">
 					<tbody>
 						<tr data-ng-repeat="rule in game.rules | filter: filterRules | filter: searchRules | orderBy: order">
-							<td>
-								<div class="row rule">
+							<td ng-class="{'selected': selectedRules.indexOf(rule) > -1}">
+								<div class="row rule" ng-click="toggleSelection(rule);">
 									<div class="status" ng-class="{'published': rule.published, 'draft': !rule.published}"><span><!--{{rule.status}}-->{{rule.published ? 'published' : 'draft'}}</span></div>
 									<div class="date" ng-if="(rule.published && !rule.draftContent) || !rule.published"><span>{{'labels:lbl_last_edit' | i18next}}: {{convertDate(rule.lastUpdate)}}</span></div>
 									<div class="date" ng-if="rule.published && rule.draftContent"><span>{{'labels:lbl_saved_draft' | i18next}}: {{convertDate(rule.lastUpdate)}}</span></div>
 									<div class="col-md-12">
 										{{rule.name ? rule.name : rule.id}}
-										<button type="button" class="btn btn-danger btn-circle pull-right" data-ng-click="deleteRule(rule)" uib-tooltip="{{'labels:tool_delete' | i18next}}">
-										<span class="glyphicon glyphicon-trash"></span>
-									</button>
-										<button type="button" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editRule(rule)" uib-tooltip="{{'labels:tool_edit' | i18next}}">
-										<span class="glyphicon glyphicon-pencil"></span>
-									</button>
-										<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right: 1em;" data-ng-click="hideRule = !hideRule;showRule($index)" uib-tooltip="{{'labels:tool_view' | i18next}}">
-										<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideRule, 'glyphicon-eye-close': !hideRule}"></span>
-									</button>
+										<button type="button" class="btn btn-danger btn-circle pull-right" data-ng-click="deleteRule(rule);$event.stopPropagation();" uib-tooltip="{{'labels:tool_delete' | i18next}}">
+											<span class="glyphicon glyphicon-trash"></span>
+										</button>
+										<button type="button" class="btn btn-primary btn-circle pull-right" style="margin-right: 1em;" data-ng-click="editRule(rule);$event.stopPropagation();" uib-tooltip="{{'labels:tool_edit' | i18next}}">
+											<span class="glyphicon glyphicon-pencil"></span>
+										</button>
+										<button type="button" class="btn btn-warning btn-circle pull-right" style="margin-right: 1em;" data-ng-click="hideRule = !hideRule;showRule($index);$event.stopPropagation();" uib-tooltip="{{'labels:tool_view' | i18next}}">
+											<span class="glyphicon" ng-class="{'glyphicon-eye-open': hideRule, 'glyphicon-eye-close': !hideRule}"></span>
+										</button>
 									</div>
 								</div>
 								<div class="row rule">
