--- a/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
+++ b/game-engine.web/src/main/resources/consoleweb-assets/tasks/tasks.html
@@ -101,7 +101,7 @@
 							<label for="schedule">{{'labels:lbl_task_schedule' | i18next}}</label>
 							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required autofocus ng-if="input.edit" />
 							<input type="text" class="form-control" name="schedule" id="schedule" data-ng-model="input.schedule" placeholder="{{'labels:lbl_enter_new_name' | i18next}}" required ng-if="!input.edit" />
-							<span id="cron-gen" ng-click="generateCron()">generate cron expression</span>
+							<span id="cron-gen" ng-click="generateCron()">Generate cron expression</span>
 						</div>
 						<div class="col-md-6 form-group" ng-class="{'has-error': alerts.classError}">
 							<label for="className">{{'labels:lbl_task_classificationName' | i18next}}</label>
